@@ -1854,10 +1854,17 @@ randomize_and_send_udp(struct pending* pend, sldns_buffer* packet, int timeout)
 	log_assert(pend->pc && pend->pc->cp);
 
 	/* send it over the commlink */
-	if(!comm_point_send_udp_msg(pend->pc->cp, packet, 
-		(struct sockaddr*)&pend->addr, pend->addrlen)) {
-		portcomm_loweruse(outnet, pend->pc);
-		return 0;
+	if(outnet->udp_connect) {
+		if(!comm_point_send_udp_msg(pend->pc->cp, packet, NULL, 0)) {
+			portcomm_loweruse(outnet, pend->pc);
+			return 0;
+		}
+	} else {
+		if(!comm_point_send_udp_msg(pend->pc->cp, packet,
+			(struct sockaddr*)&pend->addr, pend->addrlen)) {
+			portcomm_loweruse(outnet, pend->pc);
+			return 0;
+		}
 	}
 
 	/* system calls to set timeout after sending UDP to make roundtrip
